Fix for  bug#1944 'Function RPad() sometimes produce unexpected result'